fix: [CDS-81541]: Fixed page width of service page, spinner covering the scope tabs and added click on username in sidenav footer (#18400)
* fix: [CDS-81541]: Fixed page width of service page, spinner covering the scope tabs and added click on username in sidenav footer

* fix: [CDS-81541]: removed unneccessary css

* fix: [CDS-81541]: Removed spinner and used page spinner

* fix: [CDS-81541]: Adjusted service page width

* fix: [CDS-81541]: Nested Setting page scrolls fix

* fix: [CDS-81541]: PageSpinner position fix

* feat: [CDS-81541]: added no data card

--- a/src/modules/10-common/navigation/SideNavV2/SideNavFooter/SideNavFooter.module.scss
+++ b/src/modules/10-common/navigation/SideNavV2/SideNavFooter/SideNavFooter.module.scss
@@ -14,6 +14,7 @@
   }
 
   .profileLink {
+    cursor: pointer;
     &.active {
       color: var(--primary-8);
       background-color: rgba(#0278d5, 0.25);
