--- a/src/modules/10-common/pages/SettingsPages/SettingsPages.module.scss
+++ b/src/modules/10-common/pages/SettingsPages/SettingsPages.module.scss
@@ -12,7 +12,7 @@
   .settingsPageContainer {
     min-height: calc(100vh - var(--page-header-height));
     overflow: auto;
-    padding: var(--spacing-7) var(--spacing-5) var(--spacing-7) var(--spacing-9) !important;
+    padding: var(--spacing-7) var(--spacing-5) 0 var(--spacing-9) !important;
     gap: var(--spacing-9);
 
     .settingsPageContent {
@@ -36,7 +36,7 @@
   flex-direction: column;
   align-items: center;
   gap: 8px;
-  background-color: var(--primary-bg);
+  background-color: var(--white);
   margin-left: var(--spacing-small);
 }
 
