--- a/src/modules/45-projects-orgs/components/ScopeSelector/ScopeSelector.module.scss
+++ b/src/modules/45-projects-orgs/components/ScopeSelector/ScopeSelector.module.scss
@@ -183,3 +183,9 @@
 .viewAllProjects {
   padding-right: 0 !important;
 }
+
+.pageSpinnerStyle {
+  div[data-testid='page-spinner'] {
+    height: calc(100vh - 210px);
+  }
+}
